--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <title>Dostaffkin — Доставка посылок между странами и внутри стран. Безопасно. Быстро. В целости и сохранности!</title>
     <base href="/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-        <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&apikey=87f1d589-91fd-4570-a0cc-4ed6d5a4076a&suggest_apikey=12a065c1-c4ba-4c9b-992f-ba2787a6b1a9" referrerpolicy="no-referrer" type="text/javascript"></script>
+        <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&apikey=87f1d589-91fd-4570-a0cc-4ed6d5a4076a&suggest_apikey=12a065c1-c4ba-4c9b-992f-ba2787a6b1a9" type="text/javascript"></script>
 </head>
 <body>
 <app-root></app-root>
